--- a/.htaccess
+++ b/.htaccess
@@ -6,4 +6,4 @@ RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html [L]
 
 # Redirecionar para a página "notFound" em caso de erro 404
-ErrorDocument 404 /FrameSeven-Privado/notFound
+ErrorDocument 404 https://sayseven7.github.io/FrameSeven-Privado/notFound
